--- a/ct.css
+++ b/ct.css
@@ -155,7 +155,7 @@ code {
     padding: 2px 5px;
     border-radius: 3px;
     font-size: 0.9em;
-    border: 1px solid #e1e4e8;
+    border: 1px solid #e4e8;
 }
 
 pre {
